hphp/hack/test/typecheck/construct/abstract_constructor3.php.exp
File "abstract_constructor3.php", line 7, characters 7-7:
This class must be declared `abstract`, or provide an implementation for the abstract method `__construct` (Typing[4047])
  File "abstract_constructor3.php", line 7, characters 17-17:
  `D` uses `C`
  File "abstract_constructor3.php", line 4, characters 28-38:
  The method is defined here
